# twStockAdvisor

./: .gitignore  CODEX_PROMPT.md  PLAN.md  README.md  pyproject.toml
.agents/skills/twstockadvisor/: SKILL.md
config/: ai_keys.example.json  default.toml  finmind_keys.example.json
scripts/: import_portfolio.py
src/twadvisor/: __init__.py  __main__.py  auth.py  cli.py  constants.py  models.py  settings.py
src/twadvisor/analyzer/: __init__.py  api_keys.py  base.py  claude.py  factory.py  gemini.py  openai_analyzer.py  schema.py  token_usage.py
src/twadvisor/backtest/: __init__.py  engine.py  paper_trader.py
src/twadvisor/fetchers/: __init__.py  base.py  cache.py  factory.py  finmind.py  finmind_keys.py  limits.py  market_calendar.py  twse.py  twstock_fetcher.py  yahoo.py
src/twadvisor/indicators/: __init__.py  technical.py
src/twadvisor/notifier/: __init__.py  base.py  console.py  discord.py  factory.py
src/twadvisor/performance/: __init__.py  metrics.py
src/twadvisor/portfolio/: __init__.py  cost.py  db_manager.py  manager.py  pnl.py
src/twadvisor/risk/: __init__.py  guardrails.py  position_sizer.py  validators.py
src/twadvisor/scheduler/: runner.py
src/twadvisor/web/: app.py  (+3 more)
tests/: test_analyzer.py  test_backtest.py  test_cli.py  test_cost.py  test_fetchers.py  test_finmind_chip.py  test_indicators.py  test_market_calendar.py  test_notifier.py  test_performance.py  test_portfolio.py  test_runner.py  test_screener_api.py  test_screener_pipeline.py  test_screener_rules.py  test_storage.py  test_twse_fetcher.py  test_validators.py  test_web.py
tests/fixtures/: ai_response_sample.json  portfolio_sample.csv
(+20 files in other folders)
