[project]
name = "twstockadvisor"
version = "0.1.0"
description = "台股 AI 分析助手骨架"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10.4",
    "anthropic>=0.72.0",
    "google-genai>=1.15.0",
    "keyring>=25.6.0",
    "numpy>=2.3.0",
    "openai>=1.107.0",
    "pandas>=2.3.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.11.0",
    "requests>=2.32.0",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.39",
    "typer>=0.16.0",
    "twstock>=1.4.0",
    "tzdata>=2025.2",
    "yfinance>=0.2.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.1.0",
]

[project.scripts]
twadvisor = "twadvisor.cli:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "twadvisor"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
